tests/NormalTests/paczka1/fuzzy1/29893556.err
Error in line 1: zDLnDU A96 6,0
Error in line 14: cr27FCm A311 54?9
Error in line 13: cr27FCm A311 84,5
Error in line 24: cr27FCm A946 83,9
Error in line 33: 4QjQH2MO A494 30,2
